<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/top_stories_curved_width"
    android:id="@+id/relative_layout_store"
    android:layout_height="@dimen/top_stories_curved_height"
    android:layout_gravity="start"
    android:background="@drawable/grey_border_bg_normal"
    android:gravity="center|start"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/relative_layout_image"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/top_stories_product_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hint_todo"
            android:src="@drawable/ic_amazon_logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:text="@string/sample_stories_title_1"
            android:textColor="@color/black"
            android:textSize="@dimen/top_stories_title" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/hint_discount"
            android:textSize="@dimen/top_stories_description" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="@dimen/top_stories_product_item_width"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hint_todo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_light" />

    </RelativeLayout>


</RelativeLayout>
